# RnD

./: .gitignore  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/thesis/: latexmkrc  main.tex  mylatex.sty  references.bib  refs.bib  thesis-teu.sty  thesis.tex
docs/thesis/chapter/: 0_abstract.tex  1_preface.tex  2_related.tex  3_approach.tex  4_implementation.tex  5_evaluation.tex  6_conclusion.tex  98_ack.tex  99_bibliography.tex
docs/thesis/chapters/: 01_introduction.tex  02_related_work.tex  03_method.tex  04_experiments.tex  05_discussion.tex  06_conclusion.tex
models/ctr-gcn/: config.py  train.py
models/ctr-gcn/data/: edges.py  ntu_reader.py  preprocess.py
models/ctr-gcn/model/: ctrgc.py  ctrgcn.py
models/sapiens/sapiens_inference/: __init__.py  common.py  detector.py  pose.py  pose_classes_and_palettes.py  predictor.py
src/aruco/: load_cord.py  read_aruco.py
src/ds_model/: camera_models.py  ds_model_sphere.py  dsssss.py  geometry_builder.py  math_utils.py  ply_io.py  pointing_visualizer.py  test_drive.py  visualizer_core.py
src/hpe/: min_run_sapiens.py  run_sapiens.py
src/preprocessing/image/: img2video_pose_nrm.py  test_crop.py
src/preprocessing/video/: video2img.py
src/tools/: calibrate_fisheye.py
src/utils/: build_path.py  cli_select.py  paths.py  sampling.py  select_target.py
